[package]
name = "zcash-memo-decode-wasm"
version = "0.1.0"
edition = "2021"
authors = ["zk_nd3r <zk_nd3r@frontiercompute.io>"]
description = "WASM bindings for zcash-memo-decode"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
zcash-memo-decode = { path = ".." }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
